change API, add signature support